--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ baseurl: /
 
 # Website info
 title: Na's Devlop forest
-description: The professional publishing platform
+description: Front_end Skill & Cat Share
 cover: assets/images/blog-cover.jpg
 logo: assets/images/blog-icon.png
 logo_dark: assets/images/favicon.png
